# freezable

./: Cargo.toml  README.md
src/: impls.rs  lib.rs  prelude.rs
src/frozen_core/: mod.rs
src/frozen_std/: boxed.rs  cell.rs  mod.rs  string.rs
src/frozen_std/collections/: hash_map.rs  hash_set.rs  mod.rs  ordered.rs
